--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+[B]1.1.1[/B]
+- Removed debug logging
+
 [B]1.1.0[/B]
 - Fixed MQTT not reconnecting after disconnecting from broker.
 - Added MQTT auto discovery for home assistant.
