--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+[B]1.1.2[/B]
+- MQTT reconnect after network fail.
+- Updated home assistant mqtt topics for better response when changing light from other places.
+
 [B]1.1.1[/B]
 - Removed debug logging
 
